src/tests/snapshots/ppl__tests__integer_not_eq_rational.error.snap
---
source: src/tests/mod.rs
expression: err
---
Error: semantics::no_function

  × no operator `<:Integer> != <:Rational>`
   ╭─[main.ppl:1:1]
 1 │ 1 != 1.0
   · ┬ ─┬ ─┬─
   · │  │  ╰── <:Rational>
   · │  ╰── for this operator
   · ╰── <:Integer>
   ╰────

Advice:   ☞ candidate is not viable
  ╰─▶ semantics::type_mismatch
      
        × expected `Self` type, got `Rational`
      
      Error:   × Self
           ╭─[core.ppl:213:19]
       212 │
       213 │     fn <x: Self> != <y: Self> => not (x == y)
           ·                      ┬
           ·                      ╰── this has `Self` type
       214 │
           ╰────
      Error:   × Rational
         ╭─[main.ppl:1:6]
       1 │ 1 != 1.0
         ·      ─┬─
         ·       ╰── this has `Rational` type
         ╰────
      
Advice:   ☞ candidate is not viable
  ╰─▶ semantics::type_mismatch
      
        × expected `Self` type, got `Rational`
      
      Error:   × Self
           ╭─[core.ppl:213:19]
       212 │
       213 │     fn <x: Self> != <y: Self> => not (x == y)
           ·                      ┬
           ·                      ╰── this has `Self` type
       214 │
           ╰────
      Error:   × Rational
         ╭─[main.ppl:1:6]
       1 │ 1 != 1.0
         ·      ─┬─
         ·       ╰── this has `Rational` type
         ╰────
